# rtu102driver

./: README.md  RTU102_NBIOT_LLM_GUIDE.md  dec.md
docs/: unified-auth-plan.md
node_receiver/: README.md  package.json
node_receiver/config/: receiver.example.json  receiver.server.json
node_receiver/src/: config.js  crc16.js  decode_dump.js  jsonl.js  key_probe.js  main.js  protocol.js  udp_server.js  xtea.js
node_receiver/systemd/: rtu102-node-receiver.service
node_receiver/tests/: config.test.js  decode_dump.test.js  key_probe.test.js  main_cli.test.js  udp_loopback.test.js  vectors.test.js
php_receiver/: README.md  composer.json  phpunit.xml
php_receiver/config/: receiver.example.json
php_receiver/src/: Config.php  Crc16.php  JsonlWriter.php  ProtocolDecoder.php  UdpReceiver.php  Xtea.php
php_receiver/systemd/: rtu102-php-receiver.service
php_receiver/tests/: ProtocolVectorsTest.php  UdpLoopbackTest.php
python_receiver/: README.md  counter_viewer.py  decode_counters.py  pyproject.toml
python_receiver/src/rtu_receiver/: __init__.py  config.py  counter_cli.py  counter_viewer.py  crc16.py  jsonl.py  main.py  protocol.py  udp_server.py  xtea.py
python_receiver/systemd/: rtu102-python-receiver.service
python_receiver/tests/: test_counter_viewer.py  test_udp_loopback.py  test_vectors.py
tmp_docs/: mkr_energy_api.txt
